--- a/.github/workflows/kanidm_book.yml
+++ b/.github/workflows/kanidm_book.yml
@@ -80,7 +80,7 @@ jobs:
     steps:
       - name: Setup Pages
         uses: actions/configure-pages@v3
-        if: ${{ github.action_ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm' }}
+        if: ${{ github.action_ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm' && github.event == 'merge' }}
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
