--- a/.github/workflows/kanidm_book.yml
+++ b/.github/workflows/kanidm_book.yml
@@ -53,6 +53,7 @@ jobs:
   fanout:
     uses: './.github/workflows/kanidm_individual_book.yml'
     needs: pre_deploy
+    if: ${{ github.action_ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm' && github.event == 'merge' }}
 
     strategy:
       fail-fast: false
@@ -70,13 +71,14 @@ jobs:
 
   deploy:
     environment:
-      name: github-pages
+      name: "github-pages"
       url: ${{ steps.deployment.outputs.page_url }}
     needs:
       - pre_deploy
       - fanout
       - docs_master
     runs-on: ubuntu-latest
+    if: ${{ github.action_ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm' && github.event == 'merge' }}
     steps:
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -97,18 +99,6 @@ jobs:
           path: ./docs/
         env:
           ACTIONS_RUNNER_DEBUG: true
-      # - name: Log more stuff
-      #   run: |
-      #     echo "Currently in $(pwd)"
-      #     mkdir -p docs && find $(pwd) -ls > ./docs/manifest.txt
-      #   env:
-      #     ACTIONS_RUNNER_DEBUG: true
-      # - name: Upload docs dir as an artifact
-      #   # https://github.com/actions/upload-artifact
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: logs
-      #     path: docs/
       - name: Extract the files
         run: |
           pwd
