--- a/server/web_ui/Cargo.toml
+++ b/server/web_ui/Cargo.toml
@@ -27,7 +27,7 @@ repository = "https://github.com/kanidm/kanidm/"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-compact_jwt = { workspace = true, default-features = false, features = ["unsafe_release_without_verify"] }
+compact_jwt = { workspace = true }
 # gloo = "^0.8.0"
 gloo = { workspace = true }
 js-sys = { workspace = true }
