--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ argon2 = { version = "0.5.0", features = ["alloc"] }
 async-recursion = "1.0.4"
 async-trait = "^0.1.68"
 axum = {version = "0.6.18", features = ["json", "http2", "macros", "tracing", "headers", "original-uri", "query", "form"]}
-axum-csp = { path="/Users/yaleman/Projects/goatns/axum-csp" }
+axum-csp = { version = "0.0.4" }
 base32 = "^0.4.0"
 base64 = "^0.21.0"
 base64urlsafedata = "0.1.3"
@@ -113,7 +113,7 @@ qrcode = "^0.12.0"
 quote = "1"
 rand = "^0.8.5"
 regex = "1.8.4"
-reqwest = { version = "0.11.18", default-features = false, features=["cookies", "json", "gzip", "native-tls"] }
+reqwest = { version = "0.11.18", default-features = false, features=["cookies", "json", "gzip", "native-tls", "native-tls-alpn"] }
 rpassword = "^7.2.0"
 rusqlite = "^0.28.0"
 
