--- a/windows_integration/client/Cargo.toml
+++ b/windows_integration/client/Cargo.toml
@@ -35,4 +35,5 @@ features = [
 	"Win32_System_Kernel",
 	"Win32_System_Threading",
 	"Win32_System_SystemInformation",
+	"Win32_System_Registry",
 ]
