--- a/windows_integration/client/Cargo.toml
+++ b/windows_integration/client/Cargo.toml
@@ -36,4 +36,5 @@ features = [
 	"Win32_System_Threading",
 	"Win32_System_SystemInformation",
 	"Win32_System_Registry",
+	"Win32_NetworkManagement_NetManagement",
 ]
