--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ hashbrown = { version = "0.14.0", features = ["serde", "inline-more", "ahash"] }
 hex = "^0.4.3"
 http-types = "^2.12.0"
 hyper = { version = "0.14.27", features = ["full"] }
+hyper-tls = "0.5.0"
 idlset = "^0.2.4"
 # idlset = { path = "../idlset" }
 js-sys = "^0.3.63"
