Fix diagram colours (#1815)

--- a/book/book.toml
+++ b/book/book.toml
@@ -13,5 +13,6 @@ title = "Kanidm Administration"
 edit-url-template = "https://github.com/kanidm/kanidm/edit/master/book/{path}"
 git-repository-url = "https://github.com/kanidm/kanidm"
 git-repository-icon = "fa-github"
+additional-css = ["theme.css"]
 
 [preprocessor.template]
