initial testing, doesn't work, stashing things

--- a/server/web_ui/Cargo.toml
+++ b/server/web_ui/Cargo.toml
@@ -77,3 +77,9 @@ features = [
     "Window",
 ]
 
+
+[dev-dependencies]
+headless_chrome = "1.0.5"
+kanidm_client = { workspace = true }
+kanidmd_testkit = { path = "../testkit" }
+tokio = { workspace = true }
