test fixing comment prettying

--- a/server/web_ui/Cargo.toml
+++ b/server/web_ui/Cargo.toml
@@ -14,21 +14,15 @@ license = "MPL-2.0"
 homepage = "https://github.com/kanidm/kanidm/"
 repository = "https://github.com/kanidm/kanidm/"
 
-# version = { workspace = true }
-# authors = { workspace = true }
-# rust-version = { workspace = true }
-# edition = { workspace = true }
-# license = { workspace = true }
-# homepage = { workspace = true }
-# repository = { workspace = true }
-
+[features]
+default = []
+webdriver = []
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 compact_jwt = { workspace = true }
-# gloo = "^0.8.0"
 gloo = { workspace = true }
 js-sys = { workspace = true }
 kanidm_proto = { workspace = true, features = ["wasm"] }
@@ -79,7 +73,7 @@ features = [
 
 
 [dev-dependencies]
-headless_chrome = "1.0.5"
+fantoccini = { versino = "0.19.3" }
 kanidm_client = { workspace = true }
 kanidmd_testkit = { path = "../testkit" }
 tokio = { workspace = true }
