--- a/.github/workflows/wasm_test.yml
+++ b/.github/workflows/wasm_test.yml
@@ -41,9 +41,13 @@ jobs:
       # Optional: do not specify to match Chrome's version
       # chromedriver-version: '88.0.4324.96'
 
-      # docs here:
-      # https://rustwasm.github.io/docs/wasm-bindgen/wasm-bindgen-test/browsers.html
-      - run: make webui
+      # - run: make webui
       - name: "Run wasm-pack test"
+        # https://rustwasm.github.io/docs/wasm-bindgen/wasm-bindgen-test/browsers.html
         run: make webui/test
         continue-on-error: true
+
+      - name: "Run webdriver tests"
+        run: |
+          chromedriver &
+          cargo test -p kanidmd_testkit --features webdriver
