headless horsemen and such things

--- a/server/testkit/Cargo.toml
+++ b/server/testkit/Cargo.toml
@@ -16,7 +16,7 @@ name = "kanidmd_testkit"
 path = "src/lib.rs"
 
 [features]
-default = []
+default = ["webdriver"]
 # Enables webdriver tests, you need to be running a webdriver server
 webdriver = ["fantoccini"]
 
@@ -25,6 +25,8 @@ kanidm_client = { workspace = true }
 kanidm_proto = { workspace = true }
 kanidmd_core = { workspace = true }
 kanidmd_lib = { workspace = true }
+# used for webdriver testing
+hyper-tls = { workspace = true }
 # used for webdriver testing
 fantoccini = { version="0.19.3", optional=true}
 
