Ensure we dont use std hashmaps (#1848)
* Ensure we dont use std hashmaps
* coalescing the clippy config files

---------

Co-authored-by: James Hodgkinson <james@terminaloutcomes.com>

--- a/clippy.toml
+++ b/clippy.toml
@@ -11,3 +11,5 @@ too-many-arguments-threshold = 8
 
 # default's 250
 type-complexity-threshold = 300
+
+disallowed-types = ["std::collections::HashMap", "std::collections::HashSet"]
