--- a/.github/workflows/docker_build_kanidm.yml
+++ b/.github/workflows/docker_build_kanidm.yml
@@ -10,6 +10,10 @@ name: Container - Kanidm
   push:
     branches:
       - master
+permissions:
+  packages: write
+  contents: read
+  id-token: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
