Working admin sockets

--- a/libs/profiles/container_generic.toml
+++ b/libs/profiles/container_generic.toml
@@ -1,3 +1,4 @@
 web_ui_pkg_path = "/pkg"
 # Don't set the cpu_flags to autodetect for this platform
 # cpu_flags = "none"
+admin_bind_path = "/var/run/kanidmd.sock"
