--- a/libs/profiles/release_suse_generic.toml
+++ b/libs/profiles/release_suse_generic.toml
@@ -1,3 +1,4 @@
 web_ui_pkg_path = "/usr/share/kanidm/ui/pkg"
 # Don't set the value for autodetect
 # cpu_flags = "none"
+admin_bind_path = "/var/run/kanidmd/sock"
