--- a/unix_integration/Cargo.toml
+++ b/unix_integration/Cargo.toml
@@ -47,6 +47,7 @@ bytes = { workspace = true }
 clap = { workspace = true, features = ["derive", "env"] }
 csv = { workspace = true }
 futures = { workspace = true }
+hashbrown = { workspace = true }
 libc = { workspace = true }
 libsqlite3-sys = { workspace = true }
 lru = { workspace = true }
