--- a/platform/opensuse/kanidmd.service
+++ b/platform/opensuse/kanidmd.service
@@ -11,7 +11,7 @@ Before=radiusd.service
 Type=simple
 DynamicUser=yes
 UMask=0027
-StateDirectory=kanidmd
+StateDirectory=kanidm
 CacheDirectory=kanidmd
 RuntimeDirectory=kanidmd
 ExecStart=/usr/sbin/kanidmd server -c /etc/kanidm/server.toml
