--- a/platform/opensuse/kanidmd.service
+++ b/platform/opensuse/kanidmd.service
@@ -8,7 +8,7 @@ After=chronyd.service ntpd.service network-online.target
 Before=radiusd.service
 
 [Service]
-Type=simple
+Type=notify
 DynamicUser=yes
 UMask=0027
 StateDirectory=kanidm
