--- a/platform/opensuse/kanidmd.service
+++ b/platform/opensuse/kanidmd.service
@@ -16,6 +16,9 @@ CacheDirectory=kanidmd
 RuntimeDirectory=kanidmd
 ExecStart=/usr/sbin/kanidmd server -c /etc/kanidm/server.toml
 
+AmbientCapabilities=CAP_NET_BIND_SERVICE
+CapabilityBoundingSet=CAP_NET_BIND_SERVICE
+
 NoNewPrivileges=true
 PrivateTmp=true
 PrivateDevices=true
