--- a/unix_integration/Cargo.toml
+++ b/unix_integration/Cargo.toml
@@ -58,7 +58,7 @@ kanidm_lib_crypto = { workspace = true }
 kanidm_lib_file_permissions = { workspace = true }
 notify-debouncer-full = { workspace = true }
 rpassword = { workspace = true }
-rusqlite = { workspace = true }
+rusqlite = { workspace = true, features = ["uuid"] }
 selinux = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
@@ -69,7 +69,7 @@ tokio = { workspace = true, features = ["rt", "fs", "macros", "sync", "time", "n
 tokio-util = { workspace = true, features = ["codec"] }
 tracing = { workspace = true }
 tss-esapi = { workspace = true, optional = true }
-reqwest = { workspace = true, default-features = false }
+uuid = { workspace = true }
 walkdir = { workspace = true }
 
 [target.'cfg(not(target_family = "windows"))'.dependencies]
