--- a/unix_integration/Cargo.toml
+++ b/unix_integration/Cargo.toml
@@ -69,7 +69,7 @@ tokio = { workspace = true, features = ["rt", "fs", "macros", "sync", "time", "n
 tokio-util = { workspace = true, features = ["codec"] }
 tracing = { workspace = true }
 tss-esapi = { workspace = true, optional = true }
-reqwest = { workspace = true, default-features = false }
+uuid = { workspace = true }
 walkdir = { workspace = true }
 
 [target.'cfg(not(target_family = "windows"))'.dependencies]
