Improve default shells for distros

--- a/libs/profiles/container_generic.toml
+++ b/libs/profiles/container_generic.toml
@@ -3,3 +3,4 @@ web_ui_pkg_path = "/pkg"
 # cpu_flags = "none"
 admin_bind_path = "/data/kanidmd.sock"
 default_config_path = "/data/server.toml"
+default_unix_shell_path = "/bin/false"
