--- a/libs/profiles/developer.toml
+++ b/libs/profiles/developer.toml
@@ -3,3 +3,4 @@ web_ui_pkg_path = "../web_ui/pkg"
 cpu_flags = "native"
 admin_bind_path = "/tmp/kanidmd.sock"
 default_config_path = "../../examples/insecure_server.toml"
+default_unix_shell_path = "/bin/bash"
