--- a/libs/profiles/release_suse_generic.toml
+++ b/libs/profiles/release_suse_generic.toml
@@ -3,3 +3,4 @@ web_ui_pkg_path = "/usr/share/kanidm/ui/pkg"
 # cpu_flags = "none"
 admin_bind_path = "/var/run/kanidmd/sock"
 default_config_path = "/etc/kanidm/server.toml"
+default_unix_shell_path = "/bin/bash"
