--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ fs2 = "^0.4.3"
 futures = "^0.3.28"
 futures-concurrency = "^3.1.0"
 futures-util = { version = "^0.3.21", features = ["sink"] }
+git2 = "0.17.2"
 gloo = "^0.8.1"
 hashbrown = { version = "0.14.0", features = ["serde", "inline-more", "ahash"] }
 hex = "^0.4.3"
@@ -85,7 +86,6 @@ kanidm_lib_file_permissions = { path = "./libs/file_permissions" }
 kanidm_client = { path = "./libs/client", version = "1.1.0-alpha.11" }
 kanidm_proto = { path = "./proto", version = "1.1.0-alpha.11" }
 kanidm_unix_int = { path = "./unix_integration" }
-last-git-commit = "0.2.0"
 # REMOVE this
 lazy_static = "^1.4.0"
 ldap3_client = "^0.3.5"
