--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ members = [
     "libs/crypto",
     "libs/file_permissions",
     "libs/profiles",
-    "libs/sketching"
+    "libs/sketching",
+    "libs/users"
 ]
 
 [workspace.package]
@@ -58,7 +59,7 @@ concread = "^0.4.1"
 # concread = { path = "../concread" }
 cron = "0.12.0"
 crossbeam = "0.8.1"
-criterion = "^0.4.0"
+criterion = "^0.5.1"
 csv = "1.2.2"
 dialoguer = "0.10.4"
 dyn-clone = "^1.0.12"
@@ -72,7 +73,6 @@ git2 = "0.17.2"
 gloo = "^0.8.1"
 hashbrown = { version = "0.14.0", features = ["serde", "inline-more", "ahash"] }
 hex = "^0.4.3"
-http-types = "^2.12.0"
 hyper = { version = "0.14.27", features = ["full"] }
 hyper-tls = "0.5.0"
 idlset = "^0.2.4"
@@ -86,6 +86,7 @@ kanidm_lib_file_permissions = { path = "./libs/file_permissions" }
 kanidm_client = { path = "./libs/client", version = "1.1.0-alpha.11" }
 kanidm_proto = { path = "./proto", version = "1.1.0-alpha.11" }
 kanidm_unix_int = { path = "./unix_integration" }
+kanidm_utils_users = { path = "./libs/users" }
 # REMOVE this
 lazy_static = "^1.4.0"
 ldap3_client = "^0.3.5"
@@ -156,7 +157,6 @@ tss-esapi = "^7.2.0"
 
 url = "^2.4.0"
 urlencoding = "2.1.3"
-users = "^0.11.0"
 uuid = "^1.4.1"
 
 wasm-bindgen = "^0.2.86"
