--- a/server/web_ui/Cargo.toml
+++ b/server/web_ui/Cargo.toml
@@ -18,7 +18,6 @@ repository = "https://github.com/kanidm/kanidm/"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-compact_jwt = { workspace = true }
 gloo = { workspace = true }
 js-sys = { workspace = true }
 kanidm_proto = { workspace = true, features = ["wasm"] }
@@ -28,7 +27,6 @@ serde_json = { workspace = true }
 serde-wasm-bindgen = { workspace = true }
 wasm-bindgen = { workspace = true }
 wasm-bindgen-futures = { workspace = true }
-wasm-bindgen-test = { workspace = true }
 url = { workspace = true }
 uuid = { workspace = true }
 yew = { workspace = true, features = ["csr"] }
@@ -65,3 +63,6 @@ features = [
     "Response",
     "Window",
 ]
+
+[dev-dependencies]
+wasm-bindgen-test = { workspace = true }
