--- a/tools/iam_migrations/freeipa/Cargo.toml
+++ b/tools/iam_migrations/freeipa/Cargo.toml
@@ -34,7 +34,7 @@ uuid = { workspace = true, features = ["serde"] }
 kanidmd_lib = { workspace = true }
 
 [target.'cfg(target_family = "unix")'.dependencies]
-users = { workspace = true }
+kanidm_utils_users = { workspace = true }
 
 [build-dependencies]
 clap = { workspace = true, features = ["derive"] }
