--- a/libs/profiles/Cargo.toml
+++ b/libs/profiles/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "profiles"
+name = "kanidm_build_profiles"
 description = "Kanidm Build System Profiles"
 documentation = "https://docs.rs/kanidm/latest/kanidm/"
 # We do not have tests in this pkg
