--- a/unix_integration/Cargo.toml
+++ b/unix_integration/Cargo.toml
@@ -81,4 +81,4 @@ kanidmd_core = { workspace = true }
 [build-dependencies]
 clap = { workspace = true, features = ["derive"] }
 clap_complete = { workspace = true }
-profiles = { workspace = true }
+kanidm_build_profiles = { workspace = true }
