--- a/server/daemon/Cargo.toml
+++ b/server/daemon/Cargo.toml
@@ -47,4 +47,4 @@ tikv-jemallocator = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 clap = { workspace = true, features = ["derive"] }
 clap_complete = { workspace = true }
-profiles = { workspace = true }
+kanidm_build_profiles = { workspace = true }
