--- a/.github/workflows/docker_build_kanidmd.yml
+++ b/.github/workflows/docker_build_kanidmd.yml
@@ -2,7 +2,7 @@
 name: Container - Kanidmd
 
 # This is always built and uploads an OCI image as a build artifact, but only
-# pushes to "ghcr.io/kanidm/kanidmd:devel" when on "kanidm/kanidm@master". 
+# pushes to "ghcr.io/kanidm/kanidmd:devel" when on "kanidm/kanidm@master".
 on:
   pull_request:
   push:
@@ -22,7 +22,7 @@ jobs:
       - name: Build kanidmd
         uses: docker/build-push-action@v4
         with:
-          platforms: "linux/amd64"
+          platforms: "linux/amd64,linux/arm64"
           tags: ghcr.io/${{ github.repository_owner }}/kanidmd:devel
           # build-args: |
           #  "KANIDM_BUILD_OPTIONS=-j1"
