--- a/.github/workflows/docker_build_kanidmd.yml
+++ b/.github/workflows/docker_build_kanidmd.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build kanidmd
         uses: docker/build-push-action@v4
         with:
-          platforms: "linux/amd64,linux/arm64"
+          platforms: "linux/arm64"
           tags: ghcr.io/${{ github.repository_owner }}/kanidmd:devel
           # build-args: |
           #  "KANIDM_BUILD_OPTIONS=-j1"
