--- a/.github/workflows/kanidm_book.yml
+++ b/.github/workflows/kanidm_book.yml
@@ -59,7 +59,7 @@ jobs:
     uses: './.github/workflows/kanidm_individual_book.yml'
     needs: pre_deploy
     # yamllint disable-line rule:line-length
-    if: ${{ github.action_ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm' && github.event == 'merge' }}
+    # if: ${{ github.action_ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm' }}
 
     strategy:
       fail-fast: false
