replaced `skip_serializing_if` with `skip_serializing_none`

--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -49,6 +49,7 @@ tracing-subscriber = { workspace = true, features = ["time", "json"] }
 urlencoding = { workspace = true }
 kanidm_utils_users = { workspace = true }
 uuid = { workspace = true, features = ["serde", "v4" ] }
+serde_with = "3.1.0"
 
 [build-dependencies]
 kanidm_build_profiles = { workspace = true }
